modifica endpoint
